# rk3588_yolo5_example

./: CMakeLists.txt  README.md  main.cc  postprocess.cc
opencv_3.4.15_aarch64/lib/: libopencv_calib3d.so.3.4.15  libopencv_features2d.so.3.4.15  libopencv_flann.so.3.4.15  libopencv_highgui.so.3.4.15  libopencv_imgcodecs.so.3.4.15  libopencv_ml.so.3.4.15  libopencv_objdetect.so.3.4.15  libopencv_photo.so.3.4.15  libopencv_shape.so.3.4.15  libopencv_stitching.so.3.4.15  libopencv_superres.so.3.4.15  libopencv_video.so.3.4.15  libopencv_videoio.so.3.4.15  libopencv_videostab.so.3.4.15
opencv_3.4.15_aarch64/lib/pkgconfig/: opencv.pc
opencv_3.4.15_aarch64/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
rknpu2/: yolov5.cc
